--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
 }
 
 .bodyy {
@@ -107,7 +106,6 @@ hr {
   gap: 25px;
 }
 
-
 .productos img {
   width: 70%;
   height: 180px;
@@ -137,7 +135,6 @@ hr {
   background: url(./img/banner.png) no-repeat center center/cover;
   margin-bottom: 40px;
   margin: 20px;
-  
 }
 
 .banner .content {
@@ -172,7 +169,6 @@ hr {
   color: rgb(223, 223, 223);
   font-weight: 500;
 }
-
 
 /*social*/
 
@@ -239,13 +235,13 @@ hr {
 /* Importación de fuentes de google fonts */
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 
-body {
+.bodycontact {
   background: #f3ece4;
   color: black;
-  background-color: #ab4493;
-  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%236302fe' fill-opacity='0.12' fill-rule='evenodd'/%3E%3C/svg%3E");
+  background: linear-gradient(45deg, red, blue);
+  background-repeat: no-repeat;
   font-size: 16px;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", sans-serif; 
 }
 
 .contact_form {
@@ -448,11 +444,13 @@ body {
 }
 
 .ML {
-  background-color: gb(225, 225, 0);
-  background-color: #f5f50e;
-  background-color: #f5f50e;
-  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%230a0a56' fill-opacity='0.17' fill-rule='evenodd'/%3E%3C/svg%3E");
-
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(245, 245, 14, 1) 42%,
+    rgba(185, 202, 39, 1) 97%
+  );
   height: 40cm;
 }
 
@@ -460,7 +458,7 @@ body {
   text-align: center;
   color: rgb(0, 19, 190);
   padding: 3%;
-  font-family: 'Lato', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 50px;
   margin-bottom: 5%;
   letter-spacing: 5px;
@@ -468,30 +466,31 @@ body {
   text-transform: uppercase;
   border-radius: 30px 30px 30px 30px;
 
+  font-size: 72px;
+  background: -webkit-linear-gradient(#eee, #1100ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-
 
 .ML p {
   margin-bottom: 3%;
   text-align: center;
   font-size: 2rem;
-
 }
-.spany p{
+.spany p {
   font-size: 50px;
   font-weight: 150px;
   margin-bottom: 1%;
 }
 .spany span {
-  color: #8D0801;
-  background-color: #F4D58D;
+  color: #8d0801;
+  background-color: #f4d58d;
 }
-
 
 .enviosclass a {
   cursor: pointer;
   text-align: center;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-style: italic;
   width: 3%;
   height: 3%;
@@ -502,17 +501,15 @@ body {
   color: rgb(0, 19, 190);
   border: 5px solid #fff;
   border-radius: 20%;
-  
-  
 }
 .enviosclass a:hover {
-  opacity: 0.7;}
+  opacity: 0.7;
+}
 
 p.centrado {
   text-align: center;
   width: 56cm;
   height: 100px;
-
 }
 
 iframe {
@@ -520,84 +517,82 @@ iframe {
   width: 20cm;
 }
 
-
 p.paquete {
   text-align: left;
   width: 56cm;
-  height: 100px; }
+  height: 100px;
+}
 
-  p.paquete2 {
-    text-align: right;
-    width: 56cm;
-    height: 60px; }
+p.paquete2 {
+  text-align: right;
+  width: 56cm;
+  height: 60px;
+}
 
+#paginao {
+  position: relative;
+  min-height: 100%;
+  margin-top: 50px;
+  width: 100%;
+  height: 200px;
+}
 
-    #paginao {
-      position: relative;
-      min-height: 100%;
-      margin-top:50px;
-    width:100%;
-    height:200px;
-    }
-    
-    #contenidoo {
-      padding-bottom: 50px;
-      position: fixed;
-    }
-    
-    #pieo {
-      height: 70px;
-      line-height: 50px;
-      background: #e0d6dd;
-      color: rgb(0, 0, 0);
-      text-align: center;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      font-family: "Oswald", sans-serif;
-      font-size: 17px;
-      font-weight: bold;
-    }
-    
-    #feeto {
-      height: 30px;
-      line-height: 10px;
-      background: #e0d6dd;
-      color: rgb(0, 0, 0);
-      text-align: center;
-      font-family: "Oswald", sans-serif;
-      font-size: 19px;
-    }
-  
-    .answers {
-      background-color: #00a2ff;
-      height: 100%;
-      width: 100%;
-      line-height: 70px;
-      
-    }
-    .answers p {
-      line-height: 30px ;
-      color:#000000;
-      background-color: rgb(0, 128, 202);
-      text-align: left;
-    }
-  .answers h1{
-    color: rgb(255, 255, 255);
-    text-shadow: 5px 5px 5px #ff0000;
-    text-align: center;
-    font-size: 1,5cm;
-    margin-bottom: 30px;
+#contenidoo {
+  padding-bottom: 50px;
+  position: fixed;
+}
 
-  }
+#pieo {
+  height: 70px;
+  line-height: 50px;
+  background: #e0d6dd;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  font-family: "Oswald", sans-serif;
+  font-size: 17px;
+  font-weight: bold;
+}
 
-.moredudas  {
+#feeto {
+  height: 30px;
+  line-height: 10px;
+  background: #e0d6dd;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+  font-size: 19px;
+}
+
+.answers {
+  background-color: #00a2ff;
+  height: 100%;
+  width: 100%;
+  line-height: 70px;
+}
+.answers p {
+  line-height: 30px;
+  color: #000000;
+  background-color: rgb(0, 128, 202);
+  text-align: left;
+}
+.answers h1 {
+  color: rgb(255, 255, 255);
+  text-shadow: 5px 5px 5px #ff0000;
+  text-align: center;
+  font-size: 1, 5cm;
+  margin-bottom: 30px;
+}
+
+.moredudas {
   text-align: center;
   color: rgb(0, 0, 0);
   background-color: white;
   display: inline;
-  border-radius:  14px;
+  border-radius: 14px;
 }
 
 .moredudas a {
@@ -609,16 +604,15 @@ p.paquete {
   text-align: right;
   font-size: 20px;
   margin: 10px 0;
-  display: inline-block;  
+  display: inline-block;
 }
 
 .nav-redes {
   background-color: #d6ff1e;
   background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%230a0a56' fill-opacity='0.17' fill-rule='evenodd'/%3E%3C/svg%3E");
   height: 100%;
-      width: 100%;
-      line-height: 70px;
-  
+  width: 100%;
+  line-height: 70px;
 }
 
 .nav-redes h1 {
@@ -628,9 +622,8 @@ p.paquete {
   color: rgb(255, 255, 255);
   text-shadow: 3px 3px 3px #000000;
   text-align: center;
-  font-size: 1,5cm;
+  font-size: 1, 5cm;
   margin-bottom: 30px;
-
 }
 
 .linkss {
@@ -654,10 +647,226 @@ p.paquete {
   color: rgb(0, 0, 0);
   text-shadow: 3px 3px 3px #ffffff;
   text-align: center;
-  font-size: 1,5cm;
+  font-size: 1, 5cm;
   margin-bottom: 30px;
 }
 
 .imagenredes {
   text-align: center;
 }
+
+.flex__container {
+  padding: 0px;
+  margin: 0px;
+}
+
+.bodyyproducts {
+  background: #000000;
+  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%236302fe' fill-opacity='0.12' fill-rule='evenodd'/%3E%3C/svg%3E");
+}
+
+
+    html,body,div,span,applet,object,iframe,
+    h1,h2,h3,h4,h5,h6,p,blockquote,pre,
+    a,abbr,acronym,address,big,cite,code,
+    del,dfn,em,img,ins,kbd,q,s,samp,
+    small,strike,strong,sub,sup,tt,var,
+    b,u,i,center,
+    dl,dt,dd,ol,ul,li,
+    fieldset,form,label,legend,
+    table,caption,tbody,tfoot,thead,tr,th,td,
+    article,aside,canvas,details,figcaption,figure,
+    footer,header,hgroup,menu,nav,section,summary,
+    time,mark,audio,video{
+        margin:0;
+        padding:0;
+        border:0;
+        outline:0;
+        font-size:100%;
+        font:inherit;
+        vertical-align:baseline;
+    }
+    
+    article,aside,details,figcaption,figure,
+    footer,header,hgroup,menu,nav,section{
+        display:block;
+    }
+    body{
+        line-height:1;
+    }
+    ol,ul{
+        list-style:none;
+    }
+    blockquote,q{
+        quotes:none;
+    }
+    blockquote:before,blockquote:after,
+    q:before,q:after{
+        content:’’;
+        content:none;
+    }
+  
+    
+    ins{
+        text-decoration:none;
+    }
+    del{
+        text-decoration:line-through;
+    }
+    
+    table{
+        border-collapse:collapse;
+        border-spacing:0;
+    }
+    
+    
+    
+    @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+    
+    .bodyyproducts {
+      margin: 0 auto;
+      width: 90%;
+      max-width: 1240px;
+      font-family: 'Roboto', sans-serif;
+      background-color: #ffffff;
+    }
+    
+   
+    
+    h1 {
+      font-size: 28px;
+      font-weight: 300;
+      flex: 1;
+    }
+    
+    h5 {
+      font-weight: 500;
+      line-height: 1.7em;
+    }
+    
+    h6 {
+      color: #666;
+      font-size: 14px;
+    }
+    
+    
+    
+    .product-filter {
+      display: flex;
+      padding: 30px 0;
+    }
+    
+    .sort {
+      display: flex;
+      align-self: flex-end;
+    }
+    
+    .collection-sort {
+     display: flex;
+      flex-direction: column;
+    }
+    
+    .collection-sort:first-child {
+      padding-right: 20px;
+    }
+    
+    label {
+      color: #666;
+      font-size: 10px;
+      font-weight: 500;
+      line-height: 2em;
+      text-transform: uppercase;
+    }
+    
+    .products {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    
+    .product-card {
+      display: flex;
+      flex-direction: column;
+      
+        
+      padding: 2%;
+      flex: 1 16%;
+      
+      background-color: #FFF;
+      box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.25);
+    }
+
+    .product-card {
+      -webkit-transition: 5s linear;
+      transition: 5s linear;
+    }
+    .product-card:hover{
+      
+  -webkit-box-shadow: 50px 50px 50px 50px  rgba(0,0,0,0.47);
+  box-shadow: 50px 50px 50px 50px rgba(0,0,0,0.47);
+
+    }
+    
+    .product-image img {
+      width: 100%;
+    }
+    
+    .product-info {
+      margin-top: auto;
+      padding-top: 20px;
+      text-align: center;
+    }
+    
+    @media ( max-width: 920px ) {
+      
+      .product-card {
+        flex: 1 21%;
+      }
+      
+      .products .product-card:first-child, 
+      .products .product-card:nth-child(2) {
+        flex: 2 46%;
+      }
+      
+    }
+    
+    @media ( max-width: 600px ) {
+      
+      .product-card {
+        flex: 1 46%;
+      }
+      
+    }
+    
+    @media ( max-width: 480px ) {
+      
+      h1 {
+        margin-bottom: 20px;
+      }
+      
+      .product-filter {
+        flex-direction: column;
+      }
+      
+      .sort {
+        align-self: flex-start;
+      }
+      
+    }
+
+    .cardProduct__description__action {
+      background-color: rgb(80, 135, 238);
+      display: inline-block;
+      width: 60%;
+      padding: 10px;
+      text-decoration: none;
+      font-weight: bold;
+      color: white;
+      text-align: center;
+      border-radius: 50px;
+  }
+  
+
+  
+    body {
+      background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%236302fe' fill-opacity='0.12' fill-rule='evenodd'/%3E%3C/svg%3E");
+    }
